Atualização de apiService de Cliente

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,16 @@ __pycache__/
 *.pyo
 *.pyd
 
+#Package
+package-lock.json
+package.json
+
+#Ignorar a pasta node_modules
+node_modules/
+
+#ignorar o arquivo DB.json
+DB/DB.json
+
 # Ambiente virtual
 venv/
 env/
